ACLOCAL_AMFLAGS = -I m4

include_HEADERS = \
                  urt_compiler.h \
                  urt_consts.h \
                  urt_lock.h \
                  urt_mem.h \
                  urt_stdtypes.h \
                  urt_task.h \
                  urt_utils.h \
                  urt_defaults.h \
                  urt.h \
                  urt_log.h \
                  urt_setup.h \
                  urt_std.h \
                  urt_time.h \
                  urt_param.h \
                  urt_debug.h

include_HEADERS += \
                   ../sys/$(URT_SYS)/include/urt_sys_lock.h \
                   ../sys/$(URT_SYS)/include/urt_sys_log.h \
                   ../sys/$(URT_SYS)/include/urt_sys_mem.h \
                   ../sys/$(URT_SYS)/include/urt_sys_setup.h \
                   ../sys/$(URT_SYS)/include/urt_sys_task.h \
                   ../sys/$(URT_SYS)/include/urt_sys_time.h \
                   ../sys/$(URT_SYS)/include/urt_sys_utils.h
